Update transactions find endpoints
